<resources>
    <string name="app_name">Travelmantics</string>
    <string name="admin">Admin</string>
    <string name="welcome_to_travelmantics">Welcome to Travelmantics.</string>
    <string name="User">User</string>
    <string name="select_image">SELECT IMAGE</string>
    <string name="location">Location</string>
    <string name="price">Price</string>
    <string name="name">Name</string>
    <string name="images">Images</string>
    <string name="upload">Upload</string>
</resources>
