<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Admin"
    android:orientation="vertical"
    android:paddingTop="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    >
    <EditText
        style="@style/input"
        android:hint="@string/location"
        android:id="@+id/location"
        />
    <EditText
        style="@style/input"
        android:hint="@string/price"
        android:id="@+id/price"
        android:inputType="number"
        />
    <EditText
        style="@style/input"
        android:hint="@string/name"
        android:id="@+id/resort_name"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_image"
        android:onClick="Imager"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        />
    <ImageView
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:id="@+id/image"
        android:layout_gravity="center"
        android:layout_marginTop="24dp"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/upload"
        android:onClick="upload"
        />

</LinearLayout>