<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Home"
    android:orientation="vertical"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome_to_travelmantics"
        android:textColor="@android:color/black"
        android:gravity="center"
        android:layout_marginTop="32dp"
        android:textSize="24sp"
     />
    <ImageView
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:src="@drawable/flight"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/admin"
        android:onClick="admin"
        android:layout_gravity="center"
        android:layout_marginTop="32dp"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/User"
        android:onClick="User"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        />

</LinearLayout>